# python_code_quality_and_style_example

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: test.yml
scripts/: test.sh
src/: main.py
test/unit/src/: test_main.py
