[tool.poetry]
name = "python-code-quality-and-style-example"
version = "0.1.0"
description = ""
authors = ["nesquivelr <n.esquivelrivera@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
ruff = "^0.3.4"
mypy = "^1.9.0"
vulture = "^2.11"
safety = "^3.0.1"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
pytest-xdist = "^3.5.0"
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
